[project]
name = "xz3r0-nodes"
description = "Custom ComfyUI nodes: XMath, XResolution, XImageResize, XImageSave, XLatentLoad, XLatentSave, XVideoSave, XAudioSave, XStringGroup, XWorkflowSave, XMetadataWorkflow(Extension), XDateTimeString, XFitView(Extension)"
version = "1.5.0"
license = { file = "LICENSE" }

dependencies = ["ffmpeg-python"]

[project.urls]
Repository = "https://github.com/Xz3r0-M/ComfyUI-Xz3r0-Nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Xz3r0-M/ComfyUI-Xz3r0-Nodes/wiki"
"Bug Tracker" = "https://github.com/Xz3r0-M/ComfyUI-Xz3r0-Nodes/issues"

[tool.comfy]
PublisherId = "xz3r0"
DisplayName = "ComfyUI-Xz3r0-Nodes"
Icon = "https://avatars.githubusercontent.com/u/67074212"
includes = []
