[project]
name = "xz3r0-nodes"
description = "Custom ComfyUI nodes: XAudioSave, XImageSave, XLatentLoad, XLatentSave, XMarkdownSave, XVideoSave, XWorkflowSave, XAnyGate10, XAnyToString, XControlPanel, XDateTimeString, XImageCompare, XImageResize, XKleinRefConditioning, XLinker, XMath, XMemoryCleanup, XPipe, XResolution, XSeed, XStringGroup, XStringWrap, XAudioGet, XDataSave, XImageGet, XLoraGet, XStringGet, XVideoGet. Custom ComfyUI extensions: XDataHub, XFitView"
version = "2.5.2"
license = { file = "LICENSE" }

dependencies = ["ffmpeg-python"]

[project.optional-dependencies]
test = [
    "aiohttp",
    "av",
    "numpy",
    "pillow",
    "pytest",
    "ruff",
    "safetensors",
    "scipy",
]

[tool.setuptools]
packages = ["api", "xnode", "xz3r0_utils"]

[project.urls]
Repository = "https://github.com/Xz3r0-M/ComfyUI-Xz3r0-Nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Xz3r0-M/ComfyUI-Xz3r0-Nodes/wiki"
"Bug Tracker" = "https://github.com/Xz3r0-M/ComfyUI-Xz3r0-Nodes/issues"

[tool.comfy]
PublisherId = "xz3r0"
DisplayName = "ComfyUI-Xz3r0-Nodes"
Icon = "https://avatars.githubusercontent.com/u/67074212"
includes = []

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --ignore=__init__.py"
testpaths = ["tests"]
